--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,13 @@ NEXT_PUBLIC_STRIPE_IS_TEST_KEY=true
 STRIPE_SECRET_KEY=sk_test_
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_
 STRIPE_WEBHOOKS_SIGNING_SECRET=whsec_
+
+# DB
+DATABASE_URL=
+
+# S3
+S3_BUCKET=
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
+S3_REGION=
+S3_ENDPOINT=
