--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@payloadcms/db-mongodb": "latest",
+    "@payloadcms/db-postgres": "^3.24.0",
     "@payloadcms/email-nodemailer": "latest",
     "@payloadcms/live-preview-react": "latest",
     "@payloadcms/next": "latest",
@@ -31,6 +32,7 @@
     "@payloadcms/plugin-seo": "latest",
     "@payloadcms/plugin-stripe": "latest",
     "@payloadcms/richtext-lexical": "latest",
+    "@payloadcms/storage-s3": "^3.24.0",
     "@payloadcms/translations": "latest",
     "@payloadcms/ui": "latest",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -47,6 +49,7 @@
     "embla-carousel-auto-scroll": "^8.1.5",
     "embla-carousel-react": "^8.1.5",
     "geist": "^1.3.0",
+    "graphql": "^16.10.0",
     "jsonwebtoken": "9.0.1",
     "lucide-react": "^0.378.0",
     "next": "^15.1.0",
